# single_player

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/cbs/: Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
src/cbs/components/: Component.h  ThirdPersonController.cpp  ThirdPersonController.h
src/cbs/components/RubiksCube/: RubiksCube.cpp  RubiksCube.h  Tasks.h
src/cbs/message_system/: MessageIn.h  PropertyOut.h
src/rendering/: DrawManager.h
src/scenes/: MainScene.cpp  MainScene.h  Scene.cpp  Scene.h
